Düzelt: Admin header - logo tıklanabilir, yazılar düzgün hizalı

--- a/public/admin.html
+++ b/public/admin.html
@@ -11,9 +11,12 @@
 
 <body>
     <header>
-        <div class="logo">Satıcı<span>Merkezi</span></div>
+        <a href="index.html" class="logo" style="text-decoration: none; color: inherit;">
+            Satıcı<span>Merkezi</span>
+        </a>
         <nav class="nav-links">
-            <div class="nav-item"><a href="index.html"><span>Siteye</span><span>Geri Dön</span></a></div>
+            <div class="nav-item"><a href="index.html"
+                    style="text-decoration: none; color: #333;"><span>Siteye</span><span>Geri Dön</span></a></div>
         </nav>
     </header>
 
